# snake

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  pyproject.toml
notebooks/: snake.ipynb
