[tool.poetry]
name = "Snake"
version = "0.1.0"
description = ""
authors = ["Gabriel Watkinson <gabriel.watkinson@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9.9,<3.11"

[tool.poetry.group.env.dependencies]
poethepoet = "^0.12.3"
pre-commit = "^2.17.0"
jupyter = "^1.0.0"
notebook = "^6.4.8"
jupyterlab = "^3.2.8"

[tool.poetry.group.ds.dependencies]
pandas = "^1.4.0"
numpy = "^1.22.1"
scipy = "^1.7.3"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
plotly = "^5.5.0"
scikit-learn = "^1.0.2"

[tool.poetry.group.formatting.dependencies]
black = "^22.1.0"
pylint = "^2.12.2"
isort = "^5.10.1"
mypy = "^0.931"
pydocstyle = "^6.1.1"
safety = "^1.10.3"
bandit = "^1.7.2"
mdformat = "^0.7.14"
nbqa = "^1.3.1"
docformatter = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
poetry_plugin = ["poetry"]

[tool.poetry.plugins."poetry.application.plugin"]
poethepoet = "poethepoet.plugin:PoetryPlugin"

[tool.coverage.report]
omit = ["**/site-packages/**", "poethepoet/completion/*", "poethepoet/plugin.py"]

[tool.poe]
shell_interpreter = "powershell"

[tool.poe.executor]
type = "virtualenv"

[tool.poe.tasks]

  [tool.poe.tasks.test]
  help = "Run unit and feature tests"
  shell  = "pytest --cov=snake"
  interpreter = "powershell"

  [tool.poe.tasks.types]
  help = "Run the type checker"
  shell  = "mypy snake --ignore-missing-imports"
  interpreter = "powershell"

  [tool.poe.tasks.lint]
  help = "Run the linter"
  shell  = "pylint snake --exit-zero"
  interpreter = "powershell"

  [tool.poe.tasks.style]
  help = "Validate code style"
  shell  = "black . --check --diff"
  interpreter = "powershell"

  [tool.poe.tasks.isort]
  help = "Run isort"
  shell  = "isort snake --profile black --check-only --diff"
  interpreter = "powershell"

  [tool.poe.tasks.check-docs]
  help = "Validate rst syntax in the docs"
  shell  = "rstcheck README.rst"
  interpreter = "powershell"

  [tool.poe.tasks.check-docstrings]
  help = "Validate docstrings"
  shell  = "pycodestyle snake"
  interpreter = "powershell"

  [tool.poe.tasks.check]
  help     = "Run all checks on the code base"
  sequence = ["check-docs", "style", "isort", "types", "lint"]

 [tool.poe.tasks.clean]
  help = "Remove generated files"
  cmd  = """
    # multiline commands including comments work too!
    rm -rf .coverage
           .mypy_cache
           .pytest_cache
           ./**/__pycache__
           dist
           htmlcov
           ./tests/fixtures/simple_project/venv
           ./tests/fixtures/venv_project/myvenv
           ./tests/temp
  """

  [tool.poe.tasks.format-doc]
  help = "Format docstrings"
  shell  = "docformatter attribution --pre-summary-newline"
  interpreter = "powershell"

  [tool.poe.tasks.format]
  help = "Run black and isort on the code base"
  shell  = """
    black .
    isort snake --profile black
  """
  interpreter = "powershell"

  [tool.poe.tasks.format_nb]
  help = "Run formatters on notebooks"
  shell  = """
    nbqa black $notebooks
    nbqa isort $notebooks --profile black
    nbqa pylint $notebooks
    nbqa mypy $notebooks
    nbqa pydocstyle $notebooks
    nbqa doctest $notebooks
  """
  args = [{ name = "notebooks", default = "*.ipynb" }]
  interpreter = "powershell"

  [tool.poe.tasks.safety]
  help = "Run safety checks"
  shell  = "poetry export --without-hashes -f requirements.txt | safety check --full-report --stdin"
  interpreter = "powershell"

  [tool.poe.tasks.bandit]
  help = "Run bandit checks"
  shell  = "bandit -r ."

  [tool.poe.tasks.security-checks]
  help = "Run all security checks"
  sequence = ["safety", "bandit"]

  [tool.poe.tasks.git-setup]
  help = "Setup git"
  shell  = """
    git init
    git config user.name "Gabriel Watkinson"
    git config user.email "gabriel.watkinson@gmail.com"
  """
  interpreter = "powershell"

  [tool.poe.tasks.virtualenv-setup]
  help = "Setup the virtual env"
  shell = """
    python -m virtualenv --python=python3.10.1 .venv
  """
  interpreter = "powershell"

  [tool.poe.tasks.install-dependencies]
  help = "Install dependencies"
  shell = """
    poetry lock
    poetry install
  """
  interpreter = "powershell"

  [tool.poe.tasks.pre-commit-setup]
  help = "Setup pre-commit hooks"
  shell = """
    git add .pre-commit-config.yaml
    git commit -m 'Add pre-commit hooks'
    pre-commit install
  """
  interpreter = "powershell"

  [tool.poe.tasks.initial-commit]
  help = "Initial commit"
  shell  = """
    git add .
    git commit -m "Initial commit"
  """
  interpreter = "powershell"

  [tool.poe.tasks.initialize-1]
  help = "Initialize the first part of the project"
  sequence = ["git-setup", "virtualenv-setup"]

  [tool.poe.tasks.initialize-2]
  help = "Initialize the second part of the project"
  sequence = ["install-dependencies", "pre-commit-setup", "initial-commit"]

  [tool.poe.tasks.force-cuda]
  help = "Install pytorch via pip with cuda"
  shell = """
    python -m pip install torch==1.11.0+cu113 torchvision==0.12.0+cu113 torchaudio===0.11.0+cu113 -f https://download.pytorch.org/whl/cu113/torch_stable.html
  """
  interpreter = "powershell"

  [tool.poe.tasks.poe]
  help   = "Execute poe from this repo (useful for testing)"
  script = "poethepoet:main"
